fixing spacing in landing page

--- a/src/main/webapp/styles.css
+++ b/src/main/webapp/styles.css
@@ -86,7 +86,7 @@ h1 {
 .class-list {
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 2vh;
+    margin-bottom: 2vh;
 }
 
 h6 {
